<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="etFirstName">First Name</string>
    <string name="etid">ID</string>
    <string name="etno1">No.1</string>
    <string name="etno2">No.2</string>
    <string name="etresult">Result</string>
    <string name="btnadd">Add</string>
    <string name="btnsubtract">Subtract</string>
    <string name="btndivision">Division</string>
    <string name="btnmultiplication">Multiplication</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="title_activity_login_screen">LoginScreen</string>

</resources>
